# rally

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  SidebarPlan.md  deny.toml  issues.jsonl
.beads/: issues.jsonl  metadata.json
.claude/handoffs/: 2026-04-24-001903-phase2-done-logging-infra-wip.md  2026-04-24-003500-logging-done-phase3-starting.md  2026-04-24-011500-phase3-done.md  2026-04-24-171721-phase4-done-phase45-planned.md  2026-04-24-191500-phase45-done-sidebar-v1.md  2026-04-25-134738-sidebar-s4-s6-dogfood-ready.md  2026-04-25-sidebar-s0-s3-done-tree-nav-next.md
.github/workflows/: ci.yml
crates/rally-capture/: Cargo.toml
crates/rally-capture/src/: lib.rs  ring.rs  source.rs
crates/rally-cli/: Cargo.toml
crates/rally-cli/src/: ipc_client.rs  main.rs  pane_menu.rs  tracing_init.rs
crates/rally-cli/tests/: integration.rs
crates/rally-config/: Cargo.toml
crates/rally-config/src/: jsonc.rs  lib.rs
crates/rally-core/: Cargo.toml
crates/rally-core/src/: agent.rs  capture.rs  event.rs  ids.rs  inbox.rs  lib.rs  pane.rs  policy.rs  ports.rs  workspace.rs
crates/rally-core/tests/: agent_state_machine.proptest-regressions  agent_state_machine.rs
crates/rally-daemon/: Cargo.toml
crates/rally-daemon/src/: git.rs  ipc.rs  main.rs  pipe_push.rs  services.rs  tracing_init.rs
crates/rally-events/: Cargo.toml
crates/rally-events/src/: lib.rs
crates/rally-hooks/: Cargo.toml
crates/rally-host-zellij/: Cargo.toml
crates/rally-host-zellij/src/: actions.rs  lib.rs  session.rs  shim.rs
crates/rally-inbox/: Cargo.toml
crates/rally-mcp/: Cargo.toml
crates/rally-plugin/: Cargo.toml
crates/rally-plugin/src/: lib.rs  main.rs  theme.rs  tree_merge.rs
crates/rally-plugin/src/snapshots/: sidebar_0_agents_0_inbox.snap  sidebar_0_agents_20_inbox.snap  sidebar_0_agents_3_inbox.snap  sidebar_1_agents_0_inbox.snap  sidebar_1_agents_20_inbox.snap  sidebar_1_agents_3_inbox.snap  sidebar_50_agents_0_inbox.snap  sidebar_50_agents_20_inbox.snap  sidebar_50_agents_3_inbox.snap  sidebar_5_agents_0_inbox.snap  sidebar_5_agents_20_inbox.snap  sidebar_5_agents_3_inbox.snap
crates/rally-plugin/src/widgets/: inbox_summary.rs  mod.rs  status_bar.rs  workspace_tree.rs
crates/rally-proto/: Cargo.toml
crates/rally-proto/src/: lib.rs
crates/rally-proto/src/v1/: mod.rs
crates/rally-store/: Cargo.toml
crates/rally-store/src/: agent.rs  alias.rs  convert.rs  db.rs  error.rs  event_log.rs  lib.rs  workspace.rs
crates/rally-store/tests/: crash_restart.rs
crates/rally-test-utils/: Cargo.toml
crates/rally-test-utils/src/: harness.rs  lib.rs
layouts/: sidebar-dev.kdl
xtask/: Cargo.toml
xtask/src/: main.rs
