[package]
name    = "rally-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rally"
path = "src/main.rs"

[dependencies]
rally-proto       = { workspace = true }
rally-config      = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
