[package]
name    = "rally-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rally"
path = "src/main.rs"

[dependencies]
rally-proto         = { workspace = true }
rally-config        = { workspace = true }
rally-host-zellij   = { workspace = true }
rally-capture       = { workspace = true }
clap                = { version = "4", features = ["derive"] }
crossterm           = "0.28"
serde_json          = "1"
tokio               = { version = "1", features = ["io-util", "net", "rt", "macros", "rt-multi-thread", "time"] }
anyhow              = "1"
compact_str         = { version = "0.8", features = ["serde"] }
ulid                = "1"
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tracing-appender    = { workspace = true }

[dev-dependencies]
assert_cmd         = "2"
predicates         = "3"
serde_json         = "1"
rally-test-utils   = { workspace = true }
