[package]
name    = "rally-core"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "ulid/serde", "compact_str/serde"]

[dependencies]
ulid        = "1"
compact_str = "0.8"
thiserror   = "2"
serde_json  = "1"
serde       = { version = "1", optional = true }
tracing     = { workspace = true }

[dev-dependencies]
proptest = "1"
