[package]
name    = "rally-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
rally-core  = { workspace = true, features = ["serde"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
compact_str = { version = "0.8", features = ["serde"] }
ulid        = { version = "1", features = ["serde"] }
